--- a/rank_players.ipynb
+++ b/rank_players.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "import pandas as pd \n",
     "import numpy as np \n",
     "import matplotlib.pyplot as plt \n",
-    "import  seaborn as sn "
+    "import  seaborn as sn \n",
+    "from  sklearn.ensemble import RandomForestRegressor"
    ]
   },
   {
@@ -2080,7 +2081,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.7.3 ('intern')",
    "language": "python",
    "name": "python3"
   },
@@ -2094,12 +2095,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.3"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "8b60b3ab4b8c1eedf2eea1ec0f0ad149077822031a421da87cb32a19a409f660"
+    "hash": "1bde91e21d9dbe5dcaa46ddeeb5cb9d0ed0dc6592cbd08c32430b34c583d6855"
    }
   }
  },
